--- a/client/app/i18n/locales/hi.json
+++ b/client/app/i18n/locales/hi.json
@@ -7,7 +7,12 @@
     "back": "वापस",
     "loading": "लोड हो रहा है...",
     "error": "त्रुटि",
-    "success": "सफल"
+    "success": "सफल",
+    "ok": "ठीक है",
+    "cancel": "रद्द करें",
+    "save": "सहेजें",
+    "delete": "हटाएं",
+    "edit": "संपादित करें"
   },
   "dashboard": {
     "day": "दिन",
@@ -60,7 +65,7 @@
     "password": "पासवर्ड",
     "name": "नाम",
     "preferred_language": "पसंदीदा भाषा",
-    "forgot_password": "पासवर्ड भूल गए",
+    "forgot_password": "पासवर्ड भूल गए?",
     "forgot_password_description": "अपना ईमेल पता दर्ज करें और हम आपको पासवर्ड रीसेट करने का लिंक भेजेंगे।",
     "send_reset_link": "रीसेट लिंक भेजें",
     "reset_link_sent": "पासवर्ड रीसेट लिंक आपके ईमेल पर भेज दिया गया है।",
@@ -68,12 +73,18 @@
     "email_required": "ईमेल आवश्यक है",
     "forgot_password_error": "रीसेट लिंक भेजने में विफल। कृपया पुनः प्रयास करें।",
     "reset_password": "पासवर्ड रीसेट करें",
+    "reset_password_description": "नीचे अपना नया पासवर्ड दर्ज करें।",
     "new_password": "नया पासवर्ड",
     "confirm_password": "पासवर्ड की पुष्टि करें",
     "password_mismatch": "पासवर्ड मेल नहीं खाते",
     "password_required": "पासवर्ड आवश्यक है",
-    "password_min_length": "पासवर्ड कम से कम 8 अक्षर का होना चाहिए",
-    "reset_success": "पासवर्ड सफलतापूर्वक रीसेट कर दिया गया है"
+    "password_min_length": "पासवर्ड कम से कम 6 अक्षर का होना चाहिए",
+    "reset_success": "पासवर्ड सफलतापूर्वक रीसेट कर दिया गया है",
+    "login_success": "लॉग इन सफल।",
+    "login_error": "अमान्य ईमेल या पासवर्ड।",
+    "signup_success": "खाता सफलतापूर्वक बनाया गया।",
+    "signup_error": "खाता बनाने में त्रुटि।",
+    "logout_success": "सफलतापूर्वक लॉग आउट हो गया।"
   },
   "profile": {
     "profile": "प्रोफ़ाइल",
@@ -81,6 +92,89 @@
     "email": "ईमेल",
     "preferred_language": "पसंदीदा भाषा",
     "logout": "लॉग आउट",
-    "logging_out": "लॉग आउट हो रहा है..."
+    "logging_out": "लॉग आउट हो रहा है...",
+    "title": "प्रोफ़ाइल",
+    "account": "खाता",
+    "language": "भाषा",
+    "support": "सहायता",
+    "contact_support": "सहायता से संपर्क करें",
+    "contact_support_desc": "हमारी सहायता टीम से मदद प्राप्त करें",
+    "faq": "अक्सर पूछे जाने वाले प्रश्न",
+    "faq_desc": "सामान्य प्रश्नों के उत्तर खोजें",
+    "feedback": "प्रतिक्रिया भेजें",
+    "feedback_desc": "हमें ऐप को बेहतर बनाने में मदद करें",
+    "tutorial": "उपयोग करने का तरीका",
+    "tutorial_desc": "ऐप का उपयोग करना सीखें",
+    "sign_out": "साइन आउट"
+  },
+  "faq": {
+    "title": "अक्सर पूछे जाने वाले प्रश्न",
+    "subtitle": "सिलेबस बडी के बारे में सामान्य प्रश्नों के उत्तर खोजें",
+    "how_to_upload": "सिलेबस कैसे अपलोड करें?",
+    "how_to_upload_answer": "सिलेबस अपलोड करने के लिए, होम स्क्रीन पर जाएं और '+' बटन पर टैप करें। अपनी सिलेबस फाइल (PDF या इमेज) चुनें और अपलोड पूरा करने के लिए निर्देशों का पालन करें।",
+    "supported_formats": "कौन से फाइल फॉर्मेट सपोर्टेड हैं?",
+    "supported_formats_answer": "हम वर्तमान में PDF फाइलें और इमेज (JPEG, PNG, GIF) सपोर्ट करते हैं। सर्वोत्तम परिणामों के लिए सुनिश्चित करें कि आपकी फाइल स्पष्ट और पठनीय है।",
+    "processing_time": "सिलेबस प्रोसेस करने में कितना समय लगता है?",
+    "processing_time_answer": "प्रोसेसिंग समय फाइल के आकार और जटिलता के आधार पर भिन्न होता है। अधिकांश सिलेबस 1-2 मिनट के भीतर प्रोसेस हो जाते हैं। आप प्रगति को रीयल-टाइम में ट्रैक कर सकते हैं।",
+    "edit_syllabus": "क्या मैं अपलोड के बाद सिलेबस को एडिट कर सकता हूं?",
+    "edit_syllabus_answer": "हां, आप किसी भी समय अपने सिलेबस को एडिट कर सकते हैं। सिलेबस विवरण पृष्ठ पर जाएं और विषयों, तिथियों या अन्य जानकारी में परिवर्तन करने के लिए एडिट बटन पर टैप करें।",
+    "delete_syllabus": "सिलेबस को कैसे डिलीट करें?",
+    "delete_syllabus_answer": "सिलेबस को डिलीट करने के लिए, सिलेबस विवरण पृष्ठ पर जाएं, मेनू बटन (तीन डॉट्स) पर टैप करें, और 'डिलीट' चुनें। सिलेबस को स्थायी रूप से हटाने के लिए अपनी पसंद की पुष्टि करें।",
+    "privacy": "क्या मेरा सिलेबस डेटा प्राइवेट है?",
+    "privacy_answer": "हां, आपका सिलेबस डेटा पूरी तरह से प्राइवेट है। हम सुरक्षित एन्क्रिप्शन का उपयोग करते हैं और कभी भी आपका डेटा तृतीय पक्षों के साथ साझा नहीं करते। अधिक विवरण के लिए हमारी प्राइवेसी पॉलिसी पढ़ें।",
+    "contact_support": "अभी भी प्रश्न हैं?",
+    "contact_button": "सहायता से संपर्क करें",
+    "email_client_error": "ईमेल क्लाइंट नहीं खोल पा रहे हैं। कृपया हमें support@syllabusbuddy.com पर ईमेल करें"
+  },
+  "feedback": {
+    "title": "प्रतिक्रिया भेजें",
+    "subtitle": "सिलेबस बडी को बेहतर बनाने में हमारी मदद करें",
+    "category": "प्रतिक्रिया श्रेणी",
+    "categories": {
+      "bug": "बग रिपोर्ट",
+      "feature": "फीचर अनुरोध",
+      "improvement": "सुधार",
+      "other": "अन्य"
+    },
+    "message": "आपकी प्रतिक्रिया",
+    "placeholder": "हमें बताएं कि आप क्या सोचते हैं...",
+    "submit": "प्रतिक्रिया भेजें",
+    "submitting": "भेज रहे हैं...",
+    "success": {
+      "title": "धन्यवाद!",
+      "message": "आपकी प्रतिक्रिया सफलतापूर्वक भेज दी गई है।"
+    },
+    "error": {
+      "title": "त्रुटि",
+      "empty": "कृपया भेजने से पहले अपनी प्रतिक्रिया दर्ज करें।",
+      "no_category": "कृपया प्रतिक्रिया श्रेणी चुनें।",
+      "submit": "प्रतिक्रिया भेजने में विफल। कृपया पुनः प्रयास करें।"
+    }
+  },
+  "tutorial": {
+    "title": "सिलेबस बडी का उपयोग कैसे करें",
+    "subtitle": "अपने सिलेबस का अधिकतम लाभ उठाना सीखें",
+    "step1": {
+      "title": "अपना सिलेबस अपलोड करें",
+      "description": "अपनी सिलेबस फाइल अपलोड करके शुरू करें। हम PDF और इमेज फॉर्मेट सपोर्ट करते हैं। सुनिश्चित करें कि आपकी फाइल स्पष्ट और पठनीय है।"
+    },
+    "step2": {
+      "title": "समीक्षा और संपादन",
+      "description": "प्रोसेसिंग के बाद, निकाली गई जानकारी की समीक्षा करें। आप सटीकता सुनिश्चित करने के लिए विषयों, तिथियों और अन्य विवरणों को संपादित कर सकते हैं।"
+    },
+    "step3": {
+      "title": "प्रगति ट्रैक करें",
+      "description": "सिलेबस के माध्यम से अपनी प्रगति की निगरानी करें। विषयों को पूरा के रूप में चिह्नित करें और आगामी समय सीमाओं के लिए अनुस्मारक प्राप्त करें।"
+    },
+    "step4": {
+      "title": "क्विज़ जनरेट करें",
+      "description": "अपने ज्ञान का परीक्षण करने और परीक्षाओं की तैयारी के लिए अपने सिलेबस सामग्री से क्विज़ बनाएं।"
+    },
+    "tips": {
+      "title": "प्रो टिप्स",
+      "tip1": "सर्वोत्तम परिणामों के लिए स्पष्ट, उच्च-गुणवत्ता वाली छवियों का उपयोग करें",
+      "tip2": "ट्रैक पर बने रहने के लिए नियमित रूप से अपनी प्रगति अपडेट करें",
+      "tip3": "समय सीमा न चूकने के लिए नोटिफिकेशन सक्षम करें"
+    }
   }
 }
